--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Assets\style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,7 +29,19 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="time-block">
+          <p class="hour">9:00 AM</p>
+          <p class="hour">10:00 AM</p>
+          <p class="hour">11:00 AM</p>
+          <p class="hour">12:00 PM</p>
+          <p class="hour">1:00 PM</p>
+          <p class="hour">2:00 PM</p>
+          <p class="hour">3:00 PM</p>
+          <p class="hour">4:00 PM</p>
+          <p class="hour">5:00 PM</p>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
