--- a/index.html
+++ b/index.html
@@ -30,17 +30,85 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="time-block">
-          <p class="hour">9:00 AM</p>
-          <p class="hour">10:00 AM</p>
-          <p class="hour">11:00 AM</p>
-          <p class="hour">12:00 PM</p>
-          <p class="hour">1:00 PM</p>
-          <p class="hour">2:00 PM</p>
-          <p class="hour">3:00 PM</p>
-          <p class="hour">4:00 PM</p>
-          <p class="hour">5:00 PM</p>
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">9:00 AM</p>
+          </div>
         </div>
+        <div class="col"><textarea class="present"></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">10:00 AM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">11:00 AM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">12:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">1:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">2:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">3:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">4:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <div class="time-block">
+            <p class="hour">5:00 PM</p>
+          </div>
+        </div>
+        <div class="col"><textarea></textarea></div>
+        <div class="col-2"></div>
       </div>
     </div>
 
