adding save btn to all time blocks and adding style to it

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           </div>
         </div>
         <div class="col"><textarea class="present"></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -45,7 +47,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -53,8 +57,12 @@
             <p class="hour">11:00 AM</p>
           </div>
         </div>
-        <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -63,7 +71,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -72,7 +82,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -81,7 +93,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -90,7 +104,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -99,7 +115,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
       <div class="row">
         <div class="col-2">
@@ -108,7 +126,9 @@
           </div>
         </div>
         <div class="col"><textarea></textarea></div>
-        <div class="col-2"></div>
+        <div class="col-2">
+          <button class="saveBtn"></button>
+        </div>
       </div>
     </div>
 
