--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <p class="hour">9:00 AM</p>
           </div>
         </div>
-        <div class="col"><textarea class="present"></textarea></div>
+        <div class="col">
+          <textarea class="present eventTextArea"></textarea>
+        </div>
         <div class="col-2">
           <button class="saveBtn"></button>
         </div>
@@ -46,7 +48,7 @@
             <p class="hour">10:00 AM</p>
           </div>
         </div>
-        <div class="col"><textarea></textarea></div>
+        <div class="col"><textarea class="eventTextArea"></textarea></div>
         <div class="col-2">
           <button class="saveBtn"></button>
         </div>
