--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <textarea class="present eventTextArea"></textarea>
         </div>
         <div class="col-2">
-          <button class="saveBtn"></button>
+          <button id="saveBtn"></button>
         </div>
       </div>
       <div class="row">
