overwriting old files

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col"><textarea class="eventTextArea"></textarea></div>
         <div class="col-2">
-          <button class="saveBtn"></button>
+          <button id="saveBtn2" class="saveBtn"></button>
         </div>
       </div>
       <div class="row">
