--- a/index.html
+++ b/index.html
@@ -28,108 +28,212 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">9:00 AM</p>
+      <!-- Timeblocks go here -->
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">9AM</span>
         </div>
-        <div class="col">
-          <textarea id="eventTextArea0" class="present eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn0"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">10:00 AM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea1" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn1"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">11:00 AM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea2" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn2"></button>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="9"
+          data-military="09"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="9"
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">12:00 PM</p>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">10AM</span>
         </div>
-        <div class="col">
-          <textarea id="eventTextArea3" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn3"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">1:00 PM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea4" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn4"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">2:00 PM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea5" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn5"></button>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="10"
+          data-military="10"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="10"
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">3:00 PM</p>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">11AM</span>
         </div>
-        <div class="col">
-          <textarea id="eventTextArea6" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn6"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">4:00 PM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea7" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn7"></button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-2 time-block">
-          <p class="hour">5:00 PM</p>
-        </div>
-        <div class="col">
-          <textarea id="eventTextArea8" class=" eventTextArea"></textarea>
-        </div>
-        <div class="col-2">
-          <button class="saveBtn saveBtn8"></button>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="11"
+          data-military="11"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="11"
+          >
+            <i class="fas fa-save"></i>
+          </button>
         </div>
       </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">12PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="12"
+          data-military="12"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="12"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">1PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="13"
+          data-military="13"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="13"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">2PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="14"
+          data-military="14"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="14"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">3PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="15"
+          data-military="15"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="15"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">4PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="16"
+          data-military="16"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="16"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-append">
+          <span class="input-group-text time">5PM</span>
+        </div>
+        <textarea
+          class="form-control"
+          aria-label="With textarea"
+          id="17"
+          data-military="17"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+            id="button-addon2"
+            data-time="17"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
+
   <script src="Assets\script.js"></script>
 </html>
